python/tests/gold/globalcircuitbreakingtest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Mapping\nname: globalcircuitbreakingtest-http-pr\nprefix: /GlobalCircuitBreakingTest-pr/\nservice: globalcircuitbreakingtest-http\ncircuit_breakers:\n- priority: default\n  max_pending_requests: 1024\n  max_connections: 1024\nambassador_id: globalcircuitbreakingtest\n---\napiVersion: ambassador/v1\nkind: Mapping\nname: globalcircuitbreakingtest-http-normal\nprefix: /GlobalCircuitBreakingTest-normal/\nservic [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Mapping\\nname: globalcircuitbreakingtest-http-pr\\nprefix: /GlobalCircuitBreakingTest-pr/\\nservice: globalcircuitbreakingtest-http\\ncircuit_breakers:\\n- priority: default\\n  max_pending_requests: 1024\\n  max_connections: 1024\\nambassador_id: globalcircuitbreakingtest\\n- [...]
                    },
                    "creationTimestamp": "2020-07-15T16:17:29Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "globalcircuitbreakingtest",
                    "namespace": "default",
                    "resourceVersion": "5115",
                    "selfLink": "/api/v1/namespaces/default/services/globalcircuitbreakingtest",
                    "uid": "adc70c6f-c6b6-11ea-8473-42010a80004b"
                },
                "spec": {
                    "clusterIP": "10.114.13.79",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 32529,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30902,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "globalcircuitbreakingtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"globalcircuitbreakingtest\",\"scope\":\"AmbassadorTest\",\"service\":\"globalcircuitbreakingtest-admin\"},\"name\":\"globalcircuitbreakingtest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"globalcircuitbreakingtest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"g [...]
                    },
                    "creationTimestamp": "2020-07-15T16:17:29Z",
                    "labels": {
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest",
                        "service": "globalcircuitbreakingtest-admin"
                    },
                    "name": "globalcircuitbreakingtest-admin",
                    "namespace": "default",
                    "resourceVersion": "5120",
                    "selfLink": "/api/v1/namespaces/default/services/globalcircuitbreakingtest-admin",
                    "uid": "adda17f5-c6b6-11ea-8473-42010a80004b"
                },
                "spec": {
                    "clusterIP": "10.114.9.83",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "globalcircuitbreakingtest-admin",
                            "nodePort": 32010,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "globalcircuitbreakingtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"globalcircuitbreakingtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"globalcircuitbreakingtest-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8142},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8505}],\"selector\ [...]
                    },
                    "creationTimestamp": "2020-07-15T16:17:29Z",
                    "labels": {
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "globalcircuitbreakingtest-http",
                    "namespace": "default",
                    "resourceVersion": "5127",
                    "selfLink": "/api/v1/namespaces/default/services/globalcircuitbreakingtest-http",
                    "uid": "adfc708e-c6b6-11ea-8473-42010a80004b"
                },
                "spec": {
                    "clusterIP": "10.114.11.228",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8142
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8505
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
